<resources>
    <string name="app_name">HospitalManagement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="res_celebrate">Celebrate Today</string>
    <string name="res_hospital">Hospital</string>
    <string name="res_other">Other</string>
    <string name="res_dep_name">Department</string>
    <string name="res_notification_content">Notification, just happened now.</string>
    <string name="res_time">Time</string>
    <string name="res_imv_employee">Employee Profile Image</string>
    <string name="res_emp_name">Employee Name</string>
    <string name="res_send_message">Send Message</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_employees">Employees</string>
    <string name="str_finance">Finance</string>

    <string name="expenses_overview">Expenses overview</string>
    <string name="image_expenses">image expenses</string>
    <string name="Expense_name">Expense name</string>
    <string name="Expense_description">Expense_description</string>
    <string name="Expense_money">$50 000</string>
    <string name="expensesoverview">Expenses</string>
    <string name="textviewExpenses">Expenses</string>
    <string name="profit">Profit</string>
    <string name="nothing" />
    <string name="expenses_date">22.06.2020</string>
    <string name="str_by_time">Time</string>
    <string name="str_by_department">Department</string>
    <string name="str_by_priority">Priority</string>
</resources>
