<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutNotification"
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:background="#FF5959"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></LinearLayout>

            <TextView
                android:id="@+id/tvDepartmentName"
                style="@style/RobotoTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/res_dep_name"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/linearLayoutNotification"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNotificationContent"
                style="@style/RobotoTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="start|center_vertical"
                android:text="@string/res_notification_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btnCallDashboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayoutNotification"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartmentName" />

            <TextView
                android:id="@+id/tvTime"
                style="@style/RobotoTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical|end"
                android:text="@string/res_time"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCallDashboard"
                style="@style/RobotoButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/transparent_button"
                android:text="Call"
                android:textColor="#6866BC"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayoutNotification"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationContent" />

            <Button
                android:id="@+id/btnNotifyDashboard"
                style="@style/RobotoButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/transparent_button"
                android:text="Notify"
                android:textColor="#6866BC"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCallDashboard"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvIdInvisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/cvNotification"
        app:layout_constraintStart_toEndOf="@+id/cvNotification"
        app:layout_constraintTop_toBottomOf="@+id/cvNotification" />
</androidx.constraintlayout.widget.ConstraintLayout>